--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "qbw-chatbot"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "chromadb>=1.3.5",
     "faiss-cpu>=1.13.1",
@@ -14,5 +14,6 @@ dependencies = [
     "pymupdf>=1.26.6",
     "pypdf>=6.4.1",
     "scikit-learn>=1.7.2",
+    "sentence-transformers>=5.1.2",
     "tqdm>=4.67.1",
 ]
