--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,12 @@ dependencies = [
     "faiss-cpu>=1.13.1",
     "ipykernel>=7.1.0",
     "langchain>=1.1.2",
+    "langchain-chroma>=1.1.0",
     "langchain-community>=0.4.1",
     "langchain-core>=1.1.1",
     "pymupdf>=1.26.6",
     "pypdf>=6.4.1",
+    "python-dotenv>=1.2.1",
     "scikit-learn>=1.7.2",
     "sentence-transformers>=5.1.2",
     "tqdm>=4.67.1",
