--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "chromadb>=1.3.5",
+    "docx2txt>=0.9",
     "faiss-cpu>=1.13.1",
+    "fastembed>=0.7.4",
     "ipykernel>=7.1.0",
     "langchain>=1.1.2",
     "langchain-chroma>=1.1.0",
@@ -18,4 +20,5 @@ dependencies = [
     "scikit-learn>=1.7.2",
     "sentence-transformers>=5.1.2",
     "tqdm>=4.67.1",
+    "watchdog>=6.0.0",
 ]
