--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain-chroma>=1.1.0",
     "langchain-community>=0.4.1",
     "langchain-core>=1.1.1",
+    "langchain-openai>=1.1.3",
     "pymupdf>=1.26.6",
     "pypdf>=6.4.1",
     "python-dotenv>=1.2.1",
