--- a/app/src/config.json
+++ b/app/src/config.json
@@ -1,5 +1,6 @@
 {
     "rag_options": {
+        "data_ingestion_folder": "../data/",
         "delete_file_after_ingestion": true,
         "clear_database_on_start": false,
         "similarity_threshold": 0.3,
